atualização de cor

--- a/style.css
+++ b/style.css
@@ -98,6 +98,6 @@
            
         }
         .link{
-            color: #ffffff;
+            color: #40A2E3;
             text-decoration: none;
         }
