--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@
     }
 
     .estudante{
-        background-image: background-color(#FFF6E9);
+        background-image: background-color(#8b8377);
         padding: 24px 0;
         }
         
