--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 }
     
     header{
-    background-color: #d4d8de;
+    background-color: #8f8f8f;
     color: white;
     width: 100%;
     padding: 20px;
