--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
     
     header{
     background-color: #8f8f8f;
-    color: white;
+    color: #DC5F00;
     width: 100%;
     padding: 20px;
     
