--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@
     }
 
     .estudante{
-        background-image: background-color(#ffffff);
+        background-image: background-color(#686D76);
         padding: 24px 0;
         }
         
